--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,21 @@
 .container{
     margin: 60px auto;
     width: 500px;
-    /* background-color: red; */
+    background-color: #f1f1f1;
 }
 .app-content input{
     width: 100%;
     height: 30px;
     border-radius: 5px;
 }
+.app-content input:focus{
+    background-color: rgb(97, 167, 167);
+    color: white;
+}
+
 .app-content div.list{
     margin-top: 2.5px;
     width: 100%;
-    /* background-color: rgb(150, 204, 150); */
     list-style: none;
     line-height: 2;
 }
@@ -37,10 +41,12 @@
 }
 .error{
     background-color: rgb(187, 59, 59);
+    border-radius: 5px;
+    color: #ccc;
+    padding: 5px;
 }
 .notify{
     line-height: 1.1;
-    /* background-color: red; */
     padding: 10px 2px;
     font-size: 20px;
     border-radius: 5px;
@@ -48,7 +54,6 @@
     margin-bottom: 5px;
 }
 .collection{
-    /* background-color: rgb(153, 211, 153); */
     list-style: none;
 }
 .collection li{
@@ -60,11 +65,20 @@ hr{
 .clear{
     width: 70px;
     padding: 5px;
+    border-radius: 5px;
 }
+.clear:hover{
+    border: 1px double red;
+    border-bottom: 3px solid;
+    color: red;
+     transition: all 0.3s;
+}
+
 .btn{
     width: 70px;
     padding: 5px;
     margin-top: 10px;
+    border-radius: 5px;
 }
 
 
@@ -73,6 +87,31 @@ hr{
     background-color: rgb(164, 209, 209);
     padding: 5px 2px;
 }
+
+.list-item:nth-child(even){
+    background-color: rgb(117, 240, 106);
+}
+
 .update-btn{
     margin-right: 5px;
+    padding: 3px 5px;
+    border-radius: 5px;
+    border: 1px solid orange;
+}
+.delete-btn{
+    padding: 3px 5px;
+    border-radius: 5px;
+    border: 1px solid orange;
+}
+
+.update-btn:hover{
+    border: 2px solid rgb(30, 196, 66);
+    background-color: rgb(208, 194, 233);
+    transition: all 0.3s;
+}
+.delete-btn:hover{
+    border: 2px solid white;
+    background-color: red;
+    color: white;
+    transition: all 0.3s;
 }
